Fix text wrapping in field guide items

--- a/css/field-guide.styl
+++ b/css/field-guide.styl
@@ -85,7 +85,7 @@
 .field-guide-menu-item
   @extends $reset-button
   display: block
-  padding: 0.8em 1.6em
+  padding: 0.8em 1.6em 0.8em 6em
   text-align: left
   width: 100%
 
@@ -97,6 +97,8 @@
   background: rgba(gray, 0.3)
   vertical-align: middle
   margin-right: 1em
+  margin-left: -5em
 
 .field-guide-menu-item-title
+  display: inline-block
   font-weight: bold
